# SpatialDecompositionPusht

./: .gitignore  .gitmodules  README.md  REFACTORING_PLAN.md  REFACTORING_SUMMARY.md  diffusion_policy_state_pusht_demo.ipynb  environment.yml  network.py  push_t_dataset.py  push_t_env.py  pyproject.toml  replay_demos.py  test_new_components.sh  toy_test.ipynb  toy_test.py  train_diffusion.py
SD_pusht/: CLEANUP.md  README_SEGMENT_VISUALIZATION.md  __init__.py  convert_pusht_segmented.py  convert_pusht_to_toydataset.py  eval_diffusion.py  push_t_dataset.py  render_segments.py  replay_demos.py  test_notebook_cell.py  test_segmentation.py  train_diffusion.py
SD_pusht/datasets/: SEGMENTATION_EXPLANATION.md  __init__.py  push_t_dataset.py  push_t_segmented_dataset.py  softgym_segmented_dataset.py
SD_pusht/models/: __init__.py  conditional_flow_matcher.py  conditional_unet.py  diffusion.py  flow_matching.py  local_flow_policy.py  local_flow_policy_2d.py
SD_pusht/notebooks/: plot_eval_results_interactive.ipynb  toy_test.ipynb  visualize_pusht_dataset.ipynb
SD_pusht/scripts/: analyze_initial_state_randomization.py  collect_demos.py  convert_pusht_segmented.py  eval.py  eval_local_flow_2d.py  eval_local_flow_2d_ablation.py  train.py  (+12 more)
scripts/: train_dp.sh  train_local_policy.sh
scripts_launch/: job_eval.sh  job_eval_local_flow_2d.sh  job_training.sh  job_training_local_flow_2d.sh  launch_eval.sh  launch_eval_local_flow_2d.sh  launch_eval_simple.sh  launch_training.sh  launch_training_local_flow_2d.sh  launch_training_local_flow_2d_simple.sh  launch_training_simple.sh
(+19 files in other folders)
